--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 AddType application/x-web-app-manifest+json .webapp
 
+AddType video/mp3 .mp3
 AddType video/ogg .ogv
 AddType video/mp4 .mp4
 AddType video/webm .webm
