--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
-AddType application/x-web-app-manifest+json .webapp
+Header set Access-Control-Allow-Origin "*"
+Header set Access-Control-Allow-Headers "Origin, Accept, X-Requested-With, Content-Type, If-Modified-Since"
+Header set Access-Control-Allow-Methods "GET, OPTIONS, HEAD"
 
+AddType application/x-web-app-manifest+json .webapp
 AddType video/mp3 .mp3
 AddType video/ogg .ogv
 AddType video/mp4 .mp4
